# devhelp

./: meson.build  meson_options.txt  meson_post_install.py
data/: meson.build  org.gnome.Devhelp.service.in
data/icons/: meson.build
devhelp/: dh-init.c  meson.build
docs/reference/: meson.build
docs/reference/xml/: meson.build
help/: LINGUAS  meson.build
plugins/gedit-plugin/: meson.build
po/: meson.build
src/: Makefile.am  dh-app.c  dh-app.h  dh-assistant.c  dh-book-manager.c  dh-book-manager.h  dh-preferences.c  dh-profile.c  dh-profile.h  dh-sidebar.c  dh-window.c  meson.build
unit-tests/: meson.build
