option('dbus_session_dir', type: 'string', value: '', description: 'where D-Bus session service directory is')
option('flatpak', type: 'boolean', value: false, description: 'Enable Flatpak build mode')
option('gtk_doc', type: 'boolean', value: false, description: 'use gtk-doc to build documentation')
option('introspection', type: 'boolean', value: true, description: 'Enable GObject Introspection (depends on GObject)')
